--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta chartset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <Title>Jasper Miles</Title>
+        <link href="bootstrap/css/bootstrap.min.css" />
+        <link href="css/index_style.css" />
+        <script src="bootstrap/js/bootstrap.min.js" />
+    </head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
