--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <Title>Jasper Miles</Title>
         <link href="bootstrap/css/bootstrap.min.css" />
         <link href="css/index_style.css" />
-        <script src="bootstrap/js/bootstrap.min.js" />
+        <script src="bootstrap/js/bootstrap.min.js"></script>
     </head>
 <body>
 <h1>Hello World</h1>
