--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <Title>Jasper Miles</Title>
         <link href="bootstrap/css/bootstrap.min.css" />
         <link href="css/index_style.css" />
+        <script src="js/jquery-3.1.1.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
     </head>
 <body>
