--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta chartset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <Title>Jasper Miles</Title>
-        <link href="bootstrap/css/bootstrap.min.css" />
-        <link href="css/index_style.css" />
+        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="css/index_style.css" rel="stylesheet"/>
         <script src="js/jquery-3.1.1.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
     </head>
