adding plug ins

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link href="css/index_style.css" rel="stylesheet"/>
         <script src="js/jquery-3.1.1.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="js/typed.js/dist/typed.min.js"></script>
+        <script src="jquery.scrollTo/jquery.scrollTo.min.js"></script>
     </head>
 <body>
 <h1>Hello World</h1>
