typing + fixing bug

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         <script src="js/jquery-3.1.1.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
         <script src="js/typed.js/dist/typed.min.js"></script>
-        <script src="jquery.scrollTo/jquery.scrollTo.min.js"></script>
+        <script src="js/jquery.scrollTo/jquery.scrollTo.min.js"></script>
     </head>
-<body>
-<h1>Hello World</h1>
-<p>
-    this is a test
-</p>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <body>
+        <div class="jumbotron">
+            <div class="container">
+                <span class="typeSpace"></span>
+            </div>
+        </div>
+    </body>
 </html>
