linking typing js

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
         <script src="bootstrap/js/bootstrap.min.js"></script>
         <script src="js/typed.js/dist/typed.min.js"></script>
         <script src="js/jquery.scrollTo/jquery.scrollTo.min.js"></script>
+        <script src="js/index.js"></script>
     </head>
     <body>
-        <div class="jumbotron">
-            <div class="container">
-                <span class="typeSpace"></span>
-            </div>
+        <div class="container">
+            <span class="typeSpace"></span>
         </div>
     </body>
 </html>
