centering image circle

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
         <script src="js/index.js"></script>
     </head>
     <body>
-        <div class="container">
-            <span class="typeSpace"></span>
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2"><div class="circle center-block"></div></div>
+        </div>
+        <div class="row">
+            <div class="container col-md-8 col-md-offset-2">
+                <span class="typeSpace"></span>
+            </div>
         </div>
     </body>
 </html>
