--- a/index.html
+++ b/index.html
@@ -13,12 +13,22 @@
         <script src="js/index.js"></script>
     </head>
     <body>
+        <nav class="navbar navbar-default center" role="navigation">
+            <div class="navbar-inner">
+                <ul class="nav navbar-nav">
+                    <li><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="row">
             <div class="col-md-8 col-md-offset-2"><div class="circle center-block"></div></div>
         </div>
         <div class="row">
             <div class="container col-md-8 col-md-offset-2">
-                <span class="typeSpace"></span>
+                <span class="center-block typeSpace text-center"></span>
             </div>
         </div>
     </body>
