--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
         <script src="js/index.js"></script>
     </head>
     <body>
-        <nav class="navbar navbar-default center" role="navigation">
-            <div class="navbar-inner">
+        <nav class="navbar navbar-inverse center" role="navigation">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="navbar-inner collapse navbar-collapse" id="navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></li>
