added HR + changed text

--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
                 <span class="center-block typeSpace text-center"></span>
             </div>
         </div>
+        <div class="row">
+            <hr />
+        </div>
     </body>
 </html>
