--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             <div class="navbar-inner collapse navbar-collapse" id="navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span></a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-education" aria-hidden="true"></span></a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></a></li>
                 </ul>
             </div>
