--- a/index.html
+++ b/index.html
@@ -32,16 +32,65 @@
                 </ul>
             </div>
         </nav>
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2"><div class="circle center-block"></div></div>
-        </div>
-        <div class="row">
-            <div class="container col-md-8 col-md-offset-2">
-                <span class="center-block typeSpace text-center"></span>
+        <div class="animate">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2"><div class="circle center-block"></div></div>
+            </div>
+            <div class="row">
+                <div class="container col-md-8 col-md-offset-2">
+                    <span class="center-block typeSpace text-center"></span>
+                </div>
             </div>
         </div>
         <div class="row">
             <hr />
+        </div>
+        <div class="row">
+            <div class="container col-md-8 col-md-offset-2 text-center">
+                <h1>Favourite Tools</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-1 col-md-offset-2 text-center">
+                <object type="image/svg+xml" data="images/html.svg" class="icon">
+                    Your browser does not support SVG
+                </object>
+            </div>
+            <div class="col-md-1 text-center">
+                <object type="image/svg+xml" data="images/css.svg" class="icon" data-toggle="tooltip" data-placement="bottom" title="test">
+                    Your browser does not support SVG
+                </object>
+            </div>
+            <div class="col-md-1 text-center">
+                <object type="image/svg+xml" data="images/javascript.svg" class="icon">
+                    Your browser does not support SVG
+                </object>
+            </div>
+            <div class="col-md-1 text-center">
+                <object type="image/svg+xml" data="images/nodejs.svg" class="icon">
+                    Your browser does not support SVG
+                </object>
+            </div>
+            <div class="col-md-1 text-center">
+                <object type="image/svg+xml" data="images/react.svg" class="icon">
+                    Your browser does not support SVG
+                </object>
+            </div>
+            <div class="col-md-1 text-center">
+                <object type="image/svg+xml" data="images/sass.svg" class="icon">
+                    Your browser does not support SVG
+                </object>
+            </div>
+            <div class="col-md-1 text-center">
+                <object type="image/svg+xml" data="images/github.svg" class="icon">
+                    Your browser does not support SVG
+                </object>
+            </div>
+            <div class="col-md-1 text-center">
+                <object type="image/svg+xml" data="images/bootstrap.svg" class="icon">
+                    Your browser does not support SVG
+                </object>
+            </div>
         </div>
     </body>
 </html>
