--- a/index.html
+++ b/index.html
@@ -42,6 +42,19 @@
                 </div>
             </div>
         </div>
+        <div class="row icons">
+            <div class="container col-md-1 col-md-offset-5 text-center">
+                <object type="image/svg+xml" data="images/mail.svg" class="icon">
+                    Your browser does not support SVG
+                </object>
+            </div>
+            <div class="container col-md-1 text-center">
+                <object type="image/svg+xml" data="images/github.svg" class="icon">
+                    Your browser does not support SVG
+                </object>
+            </div>
+        </a>
+        </div>
         <div class="row">
             <hr />
         </div>
