--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="fadeIn">
         <div class="row">
             <div class="container col-md-2 col-md-offset-5 text-center">
-                <button type="button" class="btn btn-link" onclick="scrollToSkills();"><span class="glyphicon glyphicon-menu-down downbutton" aria-hidden="true"></span></button>
+                <button type="button" class="btn btn-link" onclick="scrollToPortfolio();"><span class="glyphicon glyphicon-menu-down downbutton" aria-hidden="true"></span></button>
 
             </div>
         </div>
