--- a/index.html
+++ b/index.html
@@ -34,13 +34,34 @@
             <hr />
         </div>
         <div class="row portfolio">
-            <div class="col-md-12">
+            <div class="col-md-12 thumb">
+                <div class="caption text-center">
+                    <div class="content">
+                        <h1>Graphique</h1>
+                        <button type="button" class="btn btn-primary">Visit</button>
+                        <button type="button" class="btn btn-danger">Source</button>
+                    </div>
+                </div>
                 <img src="images/project1.jpg" width="100%" />
             </div>
-            <div class="col-md-12">
+            <div class="col-md-12 thumb">
+                <div class="caption text-center">
+                    <div class="content">
+                        <h1>Placeholder</h1>
+                        <button type="button" class="btn btn-primary">Visit</button>
+                        <button type="button" class="btn btn-danger">Source</button>
+                    </div>
+                </div>
                 <img src="images/project2.jpg" width="100%" />
             </div>
-            <div class="col-md-12">
+            <div class="col-md-12 thumb">
+                <div class="caption text-center">
+                    <div class="content">
+                        <h1>Placeholder</h1>
+                        <button type="button" class="btn btn-primary">Visit</button>
+                        <button type="button" class="btn btn-danger">Source</button>
+                    </div>
+                </div>
                 <img src="images/project3.jpg" width="100%" />
             </div>
         </div>
