--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div class="animate">
             <div class="row">
-                <div class="col-md-8 col-md-offset-2"><div class="circle center-block"></div></div>
+                <div class="col-md-8 col-md-offset-2"><div class="circle center-block"><div class="circle inner center-block"><img src="images/me.jpg" class="circle inner2 center-block"/></div></div></div>
             </div>
             <div class="row">
                 <div class="container col-md-8 col-md-offset-2">
@@ -66,8 +66,11 @@
             </div>
         </div>
         <div class="row">
+            <hr class="second" />
+        </div>
+        <div class="row header">
             <div class="container col-md-8 col-md-offset-2 text-center">
-                <h1>Favourite Tools</h1>
+                <h2>Some things I have learnt</h2>
             </div>
         </div>
         <div class="row skills">
@@ -102,7 +105,7 @@
                 </object>
             </div>
             <div class="col-md-1 text-center">
-                <object type="image/svg+xml" data="images/github.svg" class="icon">
+                <object type="image/svg+xml" data="images/github2.svg" class="icon">
                     Your browser does not support SVG
                 </object>
             </div>
