bottom grid fix

--- a/index.html
+++ b/index.html
@@ -74,42 +74,42 @@
             </div>
         </div>
         <div class="row skills">
-            <div class="col-md-1 col-md-offset-2 text-center">
+            <div class="col-md-1 col-md-offset-2 col-xs-3 text-center">
                 <object type="image/svg+xml" data="images/html.svg" class="icon">
                     Your browser does not support SVG
                 </object>
             </div>
-            <div class="col-md-1 text-center">
+            <div class="col-md-1 col-xs-3 text-center">
                 <object type="image/svg+xml" data="images/css.svg" class="icon" data-toggle="tooltip" data-placement="bottom" title="test">
                     Your browser does not support SVG
                 </object>
             </div>
-            <div class="col-md-1 text-center">
+            <div class="col-md-1 col-xs-3 text-center">
                 <object type="image/svg+xml" data="images/javascript.svg" class="icon">
                     Your browser does not support SVG
                 </object>
             </div>
-            <div class="col-md-1 text-center">
+            <div class="col-md-1 col-xs-3 text-center">
                 <object type="image/svg+xml" data="images/nodejs.svg" class="icon">
                     Your browser does not support SVG
                 </object>
             </div>
-            <div class="col-md-1 text-center">
+            <div class="col-md-1 col-xs-3 text-center">
                 <object type="image/svg+xml" data="images/react.svg" class="icon">
                     Your browser does not support SVG
                 </object>
             </div>
-            <div class="col-md-1 text-center">
+            <div class="col-md-1 col-xs-3 text-center">
                 <object type="image/svg+xml" data="images/sass.svg" class="icon">
                     Your browser does not support SVG
                 </object>
             </div>
-            <div class="col-md-1 text-center">
+            <div class="col-md-1 col-xs-3 text-center">
                 <object type="image/svg+xml" data="images/github2.svg" class="icon">
                     Your browser does not support SVG
                 </object>
             </div>
-            <div class="col-md-1 text-center">
+            <div class="col-md-1 col-xs-3 text-center">
                 <object type="image/svg+xml" data="images/bootstrap.svg" class="icon">
                     Your browser does not support SVG
                 </object>
