--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <div class="caption text-center">
                     <div class="content">
                         <h1>Graphique</h1>
-                        <button type="button" class="btn btn-primary">Visit</button>
-                        <button type="button" class="btn btn-danger">Source</button>
+                        <button type="button" onclick="location.href='http://data-visualisation-test.herokuapp.com'" class="btn btn-primary">Visit</button>
+                        <button type="button" onclick="location.href='https://github.com/Tehmo3/data_visualisation'" class="btn btn-danger">Source</button>
                     </div>
                 </div>
                 <img src="images/project1.jpg" width="100%" />
