--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <Title>Jasper Miles</Title>
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
         <link href="css/index_style.css" rel="stylesheet"/>
+        <link href="css/font-awesome.min.css" rel="stylesheet" />
         <script src="js/jquery-3.1.1.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
         <script src="js/typed.js/dist/typed.min.js"></script>
@@ -24,6 +25,14 @@
             </div>
         </div>
         <div class="fadeIn">
+        <div class="row margin">
+            <div class="container col-md-1 col-md-offset-5 text-center">
+                <a href="https://github.com/Tehmo3"><i class="fa fa-github-alt fa-3x"></i></a>
+            </div>
+            <div class="container col-md-1 text-center">
+                <a href="mailto:jasper.b.miles@gmail.com"><i class="fa fa-envelope-o fa-3x"></i></a>
+            </div>
+        </div>
         <div class="row">
             <div class="container col-md-2 col-md-offset-5 text-center">
                 <button type="button" class="btn btn-link" onclick="scrollToPortfolio();"><span class="glyphicon glyphicon-menu-down downbutton" aria-hidden="true"></span></button>
@@ -130,9 +139,8 @@
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
-                <button type="button" class="btn btn-default" onclick="showContactForm();" id="contactButton">Contact Me!</button>
+                <button type="button" class="btn btn-default" onclick="showContactForm();" id="contactButton">Contact form!</button>
             </div>
-
             </div>
 		<form role="form" id="contactForm" action="mailto:jasper.b.miles@gmail.com" method="post" class="contact-form">
             <div class="row">
@@ -154,7 +162,7 @@
                   	</div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row sendMessage">
                 <div class="col-md-6 col-md-offset-3">
                   <button type="submit" class="btn btn-primary pull-right">Send a message</button>
                 </div>
