--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
         <link href="css/index_style.css" rel="stylesheet"/>
         <link href="css/font-awesome.min.css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
         <script src="js/jquery-3.1.1.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
         <script src="js/typed.js/dist/typed.min.js"></script>
