adding hover and text center

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h2>Shoot me a message and we can discuss your project (or anything!) </h2>
+                <h2 class="text-center">Shoot me a message and we can discuss your project (or anything!) </h2>
             </div>
         </div>
         <div class="row">
