margin and grid change

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         </div>
         <div class="fadeIn">
         <div class="row margin">
-            <div class="container col-md-1 col-md-offset-5 text-center">
+            <div class="container col-md-1 col-md-offset-5 col-xs-2 col-xs-offset-4 text-center">
                 <a href="https://github.com/Tehmo3"><i class="fa fa-github-alt fa-3x"></i></a>
             </div>
-            <div class="container col-md-1 text-center">
+            <div class="container col-md-1 col-xs-2 text-center">
                 <a href="mailto:jasper.b.miles@gmail.com"><i class="fa fa-envelope-o fa-3x"></i></a>
             </div>
         </div>
