--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
-                <button type="button" class="btn btn-default" onclick="showContactForm();" id="contactButton">Contact form!</button>
+                <button type="button" class="btn btn-default" onclick="showContactForm();" id="contactButton">Contact Me!</button>
             </div>
             </div>
 		<form role="form" id="contactForm" action="mailto:jasper.b.miles@gmail.com" method="post" class="contact-form">
