--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="https://github.com/Tehmo3"><i class="fa fa-github-alt fa-3x"></i></a>
             </div>
             <div class="container col-md-1 col-xs-2 text-center">
-                <a href="mailto:jasper.b.miles@gmail.com"><i class="fa fa-envelope-o fa-3x"></i></a>
+                <a href="mailto:hello@jaspermiles.me"><i class="fa fa-envelope-o fa-3x"></i></a>
             </div>
         </div>
         <div class="row">
@@ -98,7 +98,7 @@
                     <button type="button" class="btn btn-default" onclick="showContactForm();" id="contactButton">Contact Me!</button>
                 </div>
                 </div>
-    		<form role="form" id="contactForm" action="mailto:jasper.b.miles@gmail.com" method="post" class="contact-form">
+    		<form role="form" id="contactForm" action="mailto:hello@jaspermiles.me" method="post" class="contact-form">
                 <div class="row">
                     <div class="col-md-3 col-md-offset-3">
                       	<div class="form-group">
