--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <body id="body">
         <div class="animate">
             <div class="row">
-
-                <div class="col-md-4 col-md-offset-4">
+                <div class="col-md-1 leftButtonDiv fadeIn">
+                    <div id="margin">
+                        <button type="button" class="btn btn-link" onclick="openNav();"><span class="glyphicon glyphicon-menu-left leftButton" aria-hidden="true"></span></button>
+                    </div>
+                </div>
+                <div class="col-md-4 col-md-offset-3">
                     <div class="circle center-block cursorChange" onclick="openNav()">
                         <div class="circle inner center-block">
                             <img src="images/me.jpg" class="circle inner2 center-block"/>
