--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body id="body">
         <div class="animate">
             <div class="row">
-                <div class="col-md-1 leftButtonDiv fadeIn">
+                <div class="col-md-1 hidden-xs leftButtonDiv fadeIn">
                     <div id="margin">
                         <button type="button" class="btn btn-link" onclick="openNav();"><span class="glyphicon glyphicon-menu-left leftButton" aria-hidden="true"></span></button>
                     </div>
